[gd_scene load_steps=24 format=3 uid="uid://dx0jyaimt46ii"]

[ext_resource type="Script" path="res://Refactor01/refactor01_shot_caller.gd" id="1_tqldx"]
[ext_resource type="FontFile" uid="uid://drgsxmxrovwlu" path="res://Fonts/pcsenior.ttf" id="2_cfhqs"]
[ext_resource type="Texture2D" uid="uid://vhmwxtq026g1" path="res://Slides/i_am_a_cutscene.png" id="3_8jvo3"]
[ext_resource type="Texture2D" uid="uid://yfxejob87hrh" path="res://Refactor01/VFX/wipes/Storyboard_1.png" id="3_r8kan"]
[ext_resource type="Texture2D" uid="uid://blv7mtljjg0un" path="res://Refactor01/VFX/wipes/Storyboard_2.png" id="4_0d40e"]
[ext_resource type="Script" path="res://Refactor01/quest_panel.gd" id="4_3y0tq"]
[ext_resource type="Texture2D" uid="uid://c7rbidf2c3nia" path="res://Old_Shit/Scripts/dialog_portrait_01.png" id="4_tn1r8"]
[ext_resource type="Texture2D" uid="uid://dgsqhe7p7cqmw" path="res://Refactor01/VFX/wipes/Storyboard_3.png" id="5_b5pth"]
[ext_resource type="Texture2D" uid="uid://64b2dggh8wd3" path="res://Refactor01/DialogPortraits/dialog_portrait_02.png" id="5_fxauh"]
[ext_resource type="Texture2D" uid="uid://b0cc4jvnwvob6" path="res://Refactor01/VFX/wipes/Storyboard_4.png" id="6_qaocw"]
[ext_resource type="Script" path="res://Refactor01/screen_wiper.gd" id="7_8jhtq"]
[ext_resource type="Texture2D" uid="uid://xgymuhoqcfav" path="res://Refactor01/VFX/wipes/Storyboard_5.png" id="7_le0vf"]
[ext_resource type="Texture2D" uid="uid://ry8ckjdb8kmx" path="res://Refactor01/VFX/wipes/Storyboard_6.png" id="8_b4h7k"]
[ext_resource type="Texture2D" uid="uid://0avsa5vpu25n" path="res://Refactor01/VFX/wipes/Storyboard_7.png" id="9_jbksq"]
[ext_resource type="Texture2D" uid="uid://clrsttigj2ymt" path="res://Refactor01/VFX/wipes/Storyboard_8.png" id="10_g82ve"]
[ext_resource type="Texture2D" uid="uid://c8vckwb4oe1d5" path="res://Refactor01/VFX/wipes/Storyboard_9.png" id="11_rc24h"]
[ext_resource type="Texture2D" uid="uid://83rg2lajok7y" path="res://Refactor01/VFX/wipes/Storyboard_10.png" id="12_4d5ph"]
[ext_resource type="Texture2D" uid="uid://bgs5pbmoo3cnf" path="res://Refactor01/VFX/wipes/Storyboard_11.png" id="13_f0orj"]
[ext_resource type="Texture2D" uid="uid://cu4lqu6w1cnmi" path="res://Refactor01/VFX/wipes/Storyboard_12.png" id="14_alxd0"]
[ext_resource type="Texture2D" uid="uid://d3art8n3bylpu" path="res://Refactor01/VFX/wipes/Storyboard_13.png" id="15_7qu8h"]
[ext_resource type="Texture2D" uid="uid://bka62bscwd1og" path="res://Refactor01/VFX/wipes/Storyboard_14.png" id="16_rut2f"]
[ext_resource type="Texture2D" uid="uid://bjxq7jtdcq406" path="res://Refactor01/VFX/wipes/Storyboard_15.png" id="17_bnnsj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5lu0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_r8kan")
}, {
"duration": 1.0,
"texture": ExtResource("4_0d40e")
}, {
"duration": 1.0,
"texture": ExtResource("5_b5pth")
}, {
"duration": 1.0,
"texture": ExtResource("6_qaocw")
}, {
"duration": 1.0,
"texture": ExtResource("7_le0vf")
}, {
"duration": 1.0,
"texture": ExtResource("8_b4h7k")
}, {
"duration": 1.0,
"texture": ExtResource("9_jbksq")
}, {
"duration": 1.0,
"texture": ExtResource("10_g82ve")
}, {
"duration": 1.0,
"texture": ExtResource("11_rc24h")
}, {
"duration": 1.0,
"texture": ExtResource("12_4d5ph")
}, {
"duration": 1.0,
"texture": ExtResource("13_f0orj")
}, {
"duration": 1.0,
"texture": ExtResource("14_alxd0")
}, {
"duration": 1.0,
"texture": ExtResource("15_7qu8h")
}, {
"duration": 1.0,
"texture": ExtResource("16_rut2f")
}, {
"duration": 1.0,
"texture": ExtResource("17_bnnsj")
}],
"loop": false,
"name": &"wipe",
"speed": 40.0
}]

[node name="refactor01_shot_caller" type="Node"]
script = ExtResource("1_tqldx")
start_at_scene_number = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ExploreModePanel" type="Panel" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="ULLabel" type="Label" parent="CanvasLayer/ExploreModePanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 13.0
offset_right = 377.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "I am the upper-left corner hud text"
vertical_alignment = 1
autowrap_mode = 3

[node name="URLabel" type="Label" parent="CanvasLayer/ExploreModePanel"]
layout_mode = 0
offset_left = 776.0
offset_top = 19.0
offset_right = 1128.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "I am the upper-right corner hud text"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="LLLabel" type="Label" parent="CanvasLayer/ExploreModePanel"]
layout_mode = 0
offset_left = 28.0
offset_top = 560.0
offset_right = 380.0
offset_bottom = 629.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "I am the lowr-left corner hud text"
vertical_alignment = 1
autowrap_mode = 3

[node name="LRLabel" type="Label" parent="CanvasLayer/ExploreModePanel"]
layout_mode = 0
offset_left = 778.0
offset_top = 560.0
offset_right = 1130.0
offset_bottom = 629.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "I am the lower-right corner hud text"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="CenterLabel" type="Label" parent="CanvasLayer/ExploreModePanel"]
self_modulate = Color(1, 1, 1, 0.25098)
layout_mode = 0
offset_left = 4.0
offset_top = 149.0
offset_right = 1153.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 80
text = "CENTER TEXT!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RaceModePanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="center_text" type="Label" parent="CanvasLayer/RaceModePanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 223.0
offset_right = 1141.0
offset_bottom = 405.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 50
text = "Center Text!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CutsceneModePanel" type="Panel" parent="CanvasLayer"]
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="cutscene_slide" type="Sprite2D" parent="CanvasLayer/CutsceneModePanel"]
position = Vector2(571, 293)
scale = Vector2(1.04607, 1.07207)
texture = ExtResource("3_8jvo3")

[node name="cutscene_prompt_text" type="Label" parent="CanvasLayer/CutsceneModePanel"]
layout_mode = 0
offset_left = 225.0
offset_top = 578.0
offset_right = 915.0
offset_bottom = 612.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "Cutscene prompt text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cutscene_dialog_panel" type="Panel" parent="CanvasLayer/CutsceneModePanel"]
self_modulate = Color(0.235294, 0.235294, 0.235294, 1)
layout_mode = 0
offset_left = 69.0
offset_top = 414.0
offset_right = 1096.0
offset_bottom = 551.0

[node name="cutscene_dialog_text" type="Label" parent="CanvasLayer/CutsceneModePanel/cutscene_dialog_panel"]
layout_mode = 0
offset_left = 214.0
offset_top = 23.0
offset_right = 806.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 16
text = "cutscene dialog text"

[node name="cutscene_dialog_portrait_right" type="Sprite2D" parent="CanvasLayer/CutsceneModePanel"]
z_index = 100
position = Vector2(1008, 470)
rotation = 0.174533
scale = Vector2(0.66, 0.66)
texture = ExtResource("4_tn1r8")

[node name="cutscene_dialog_portrait_left" type="Sprite2D" parent="CanvasLayer/CutsceneModePanel"]
z_index = 100
position = Vector2(147, 479)
rotation = -0.174533
scale = Vector2(0.66, 0.66)
texture = ExtResource("5_fxauh")

[node name="QuestMenuPanel" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0.921569)
offset_left = 123.0
offset_top = 101.0
offset_right = 1011.0
offset_bottom = 526.0
script = ExtResource("4_3y0tq")

[node name="QuestNameLabel" type="Label" parent="CanvasLayer/QuestMenuPanel"]
layout_mode = 0
offset_left = 157.0
offset_top = 78.0
offset_right = 727.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 30
text = "Current quest name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TaskListLabel" type="Label" parent="CanvasLayer/QuestMenuPanel"]
layout_mode = 0
offset_left = 249.0
offset_top = 191.0
offset_right = 649.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 20
text = "Quest task #1
Quest Task # 2
And so on"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ControlsHelp" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0.92549)
offset_left = 18.0
offset_top = 17.0
offset_right = 418.0
offset_bottom = 139.0

[node name="ControlsHelpText" type="Label" parent="CanvasLayer/ControlsHelp"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 308.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 14
text = "Go: Right-trigger
Stop/Reverse: Left-trigger
Steer: Left-stick
Fire: A button
Trap: B button"

[node name="AltControlsHelpText" type="Label" parent="CanvasLayer/ControlsHelp"]
layout_mode = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 308.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_cfhqs")
theme_override_font_sizes/font_size = 14
text = "Go: A button
Stop/Reverse: B button
Steer: Left-stick
Fire: Right-trigger
Trap: Left-trigger"

[node name="ScreenWiper" type="Panel" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_8jhtq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/ScreenWiper"]
position = Vector2(570, 308)
scale = Vector2(0.73, 0.73)
sprite_frames = SubResource("SpriteFrames_5lu0l")
animation = &"wipe"

[connection signal="animation_finished" from="CanvasLayer/ScreenWiper/AnimatedSprite2D" to="CanvasLayer/ScreenWiper" method="_on_animated_sprite_2d_animation_finished"]
